# models/user_basic.go
@@ -48,3 +48,7 @@ func DeleteUser(user UserBasic) *gorm.DB {
 	return utils.DB.Delete(&user)
 
 }
+
+func UpdateUser(user UserBasic) *gorm.DB {
+	return utils.DB.Model(&user).Updates(UserBasic{Name: user.Name, Password: user.Password})
+}
